fixed register's confirm password text misalignment

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -5,10 +5,6 @@
   max-width: 400px;
   background-color: #fff;
   text-align: left;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .login-container h1 {
@@ -18,16 +14,15 @@
 
 .input-group {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
   margin-bottom: 15px;
 }
 
 .input-group label {
-  margin-right: 10px;
+  margin-bottom: 5px;
 }
 
 .input-group input {
-  flex: 1;
   padding: 8px;
   box-sizing: border-box;
 }
